name:                bblang
version:             0.1.0.0
license:             MIT
category:            Compilers
description:         A toy functinal programming language.
synopsis:            A toy functinal programming language.
license-file:        LICENSE
author:              Stepfen Shawn
maintainer:          m18824909883@163.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable bblang
  build-depends:       
      base                 >= 4.7 && <5
    , haskeline            >= 0.7.1.2
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.6

  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs